# record

./: '  .gitignore  Cargo.toml  build.rs  flake.nix  loginInfo  shell.nix
adaptors/: Cargo.toml
adaptors/src/: discord.rs  lib.rs  macro.rs  network.rs  types.rs
adaptors/src/discord/: json_structs.rs  rest_api.rs  t.rs
macro/: Cargo.toml
public/: loginInfo
public/Discord/Channels/1003520366754402385/: a_0e6fb5fb7c58ab7bb79e83046642e60e
public/Discord/Channels/1228909562623557664/: a_1250088485158e7e726ad7a3308945ea
public/Discord/Users/187697940637155328/: a_3fa7dd863c978d4cd45eb41ff95ac4f9
public/Discord/Users/619993714978324510/: a_465640d718a391b46d548bede77b419b
record/: .gitignore  Cargo.toml
record/src/: auth.rs  main.rs  pages.rs
record/src/pages/: chat.rs  login.rs
src/: auth.rs  backend.rs  discord.rs  laycookie.record.gschema.xml  main.rs  network_req.rs  ui.rs
src/backend/: utils.rs
src/backend/discord/: json_structs.rs  rest_api.rs
src/discord/: discord_endpoints.rs  get_data.rs  websocket.rs  websocketconfig.rs
src/discord/rest_api/: discord_endpoints.rs  utils.rs
src/discord/websocket/: websocket.rs
src/discord/websocket/websocketconfig/: discord_intents.rs  websocketconfig.rs
src/discord/websocketconfig/: discord_intents.rs  websocketconfig.rs
src/ui/: pages.rs
src/ui/components/: components.rs
src/ui/theme/: main.css
ui/: .gitignore  Cargo.toml  Chat.slint  MainWindow.slint  build.rs
ui/slint/: Chat.slint  SignIn.slint
ui/src/: auth.rs  main.rs  ui.rs
