[package]
name = "record"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
#Gui
slint = "1.8.0"
#Standard

serde = "1.0.215"
serde_json = "1.0.132"
surf = "2.3.2"
smol = "2.0.2"
smol-macros = "0.1.1"
#Helper
secure-string="0.3.0"
strum = "0.26.3"

[build-dependencies]
slint-build = "1.8.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"