[package]
name = "record"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
#Gui
slint = "1.8.0"
#Helper
secure-string="0.3.0"
strum = "0.26.3"
#Standard
serde = "1.0.215"
serde_repr = "0.1.19"
serde_json = "1.0.132"
surf = "2.3.2"
smol = "2.0.2"
smol-macros = "0.1.1"
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[build-dependencies]
slint-build = "1.8.0"
