[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptors = { path = "../adaptors" }
slint = { version = "1.8.0", features = ["backend-winit-wayland", "renderer-skia"] }
# slint = "1.8.0"
smol = "2.0.2"
daemonize = "0.5.0"
tray-icon = "0.19.2"
strum = "0.26.3"

[build-dependencies]
slint-build = "1.8.0"
